--- a/todo-backend/.local.env
+++ b/todo-backend/.local.env
@@ -1,13 +1,12 @@
 
-
 DATABASE_NAME=todo_db
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
+DATABASE_PASSWORD=
 DATABASE_SYNC=true
 DATABASE_LOGGING=true
 
 # JWT
-JWT_KEY=thisisthekey
+JWT_KEY=Thisisthemossddsafsadfewacewf23423fdsrtewf
 JWT_EXPIRE=3600
